--- a/DataWatcherService/DataWatcherService/appsettings.json
+++ b/DataWatcherService/DataWatcherService/appsettings.json
@@ -1,18 +1,10 @@
 {
-  "archiveOptions": {
-    "enableArchivation": true,
-    "archiveDirectoryPath": "C:\\ServerData\\archive\\",
-    "compressionLevel": 1
-  },
-  "encodingOptions": {
-    "enableEncoding": true
-  },
-  "loggerOptions": {
-    "enableLogging": true,
-    "logFilePath": "D:\\services\\LogFile.txt"
-  },
-  "watcherOptions": {
-    "sourceDyrectoryPath": "C:\\ServerData\\archive\\",
-    "targetDyrectoryPath": "C:\\ClientData\\data\\"
-  }
+    "CompressionLevel": 1,
+    "IsCompressEnable": true,
+    "IsEncryptEnable": true,
+    "Key": "AQIDBAUGBwgJEBESExQVFg==",
+    "LogFile": "D:\\services\\LogFile.txt",
+    "SourceDirectory": "C:\\ServerData\\archive\\",
+    "TargetDirectory": "C:\\ClientData\\data\\",
+    "IsLoggerEnable": true
 }
